[2025.11.27] add footnotes, todo list